force-app/main/default/objects/Branch__c/fields/Active_Card_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Card_Count__c</fullName>
    <label>Active Card Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>