force-app/main/default/objects/Branch__c/fields/Active_for_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Campaigns__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set for filtering out non-active branches on all page layouts.</description>
    <label>Active for Campaigns</label>
    <type>Checkbox</type>
</CustomField>