force-app/main/default/objects/Branch__c/fields/Air_Duct_Cleaning_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Air_Duct_Cleaning_Spec_CPL__c</fullName>
    <label>Air Duct Cleaning (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>