force-app/main/default/objects/Branch__c/fields/Appliance_Store_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Store_Spec_CPL__c</fullName>
    <label>Appliance Store (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>