force-app/main/default/objects/Branch__c/fields/Approved_Card_Count_Not_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Approved_Card_Count_Not_Ordered__c</fullName>
    <label>Approved Card Count (Not Ordered)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>