force-app/main/default/objects/Branch__c/fields/Auto_New_Car_DTS__c.field-meta.xml
<CustomField>
    <fullName>Auto_New_Car_DTS__c</fullName>
    <label>Auto (New Car) (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>