force-app/main/default/objects/Branch__c/fields/Auto_Repair_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Auto_Repair_Spec_CPL__c</fullName>
    <label>Auto Repair (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>