force-app/main/default/objects/Branch__c/fields/Awnings_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Awnings_Spec_CPL__c</fullName>
    <label>Awnings (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>