force-app/main/default/objects/Branch__c/fields/BlindsShutters__c.field-meta.xml
<CustomField>
    <fullName>BlindsShutters__c</fullName>
    <label>Blinds/Shutters (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>