force-app/main/default/objects/Branch__c/fields/BlindsShutters_DTS__c.field-meta.xml
<CustomField>
    <fullName>BlindsShutters_DTS__c</fullName>
    <label>Blinds/Shutters (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>