force-app/main/default/objects/Branch__c/fields/BlindsShutters_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>BlindsShutters_Spec_CPL__c</fullName>
    <label>Blinds/Shutters (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>