force-app/main/default/objects/Branch__c/fields/Branch_Stage__c.field-meta.xml
<CustomField>
    <fullName>Branch_Stage__c</fullName>
    <label>Branch Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Planning</fullName>
                <default>true</default>
                <label>Pre-Planning</label>
            </value>
            <value>
                <fullName>Post-Planning</fullName>
            </value>
            <value>
                <fullName>Market Launch</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Delivering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>