force-app/main/default/objects/Branch__c/fields/CableSatellite_TVInternet_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>CableSatellite_TVInternet_Spec_CPL__c</fullName>
    <label>Cable/Satellite TV/Internet (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>