force-app/main/default/objects/Branch__c/fields/CarpetTile_Cleaning_DTS__c.field-meta.xml
<CustomField>
    <fullName>CarpetTile_Cleaning_DTS__c</fullName>
    <label>Carpet/Tile Cleaning (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>