force-app/main/default/objects/Branch__c/fields/Carrier_ID__c.field-meta.xml
<CustomField>
    <fullName>Carrier_ID__c</fullName>
    <description>It holds the career code for the branch.This code will be used to send to the outbound call of the delivery object</description>
    <label>Carrier ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>