force-app/main/default/objects/Branch__c/fields/Chimney_Sweep_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Chimney_Sweep_Spec_CPL__c</fullName>
    <label>Chimney Sweep (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>