force-app/main/default/objects/Branch__c/fields/Chiropractor__c.field-meta.xml
<CustomField>
    <fullName>Chiropractor__c</fullName>
    <label>Chiropractor (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>