force-app/main/default/objects/Branch__c/fields/Chiropractor_DTS__c.field-meta.xml
<CustomField>
    <fullName>Chiropractor_DTS__c</fullName>
    <label>Chiropractor (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>