force-app/main/default/objects/Branch__c/fields/Closet_Organizing_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Closet_Organizing_Spec_CPL__c</fullName>
    <label>Closet Organizing (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>