force-app/main/default/objects/Branch__c/fields/Closet_OrganizingGarage_Shelving__c.field-meta.xml
<CustomField>
    <fullName>Closet_OrganizingGarage_Shelving__c</fullName>
    <label>Closet Organizing/Garage Shelving (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>