force-app/main/default/objects/Branch__c/fields/Date_Stamp_Delivering__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Delivering__c</fullName>
    <label>Date Stamp: Delivering</label>
    <type>Date</type>
</CustomField>