force-app/main/default/objects/Branch__c/fields/Date_Stamp_Market_Launch__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Market_Launch__c</fullName>
    <label>Date Stamp: Market Launch</label>
    <type>Date</type>
</CustomField>