force-app/main/default/objects/Branch__c/fields/Date_Stamp_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Ordered__c</fullName>
    <label>Date Stamp: Ordered</label>
    <type>Date</type>
</CustomField>