force-app/main/default/objects/Branch__c/fields/Date_Stamp_Post_Planning__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Post_Planning__c</fullName>
    <label>Date Stamp: Post Planning</label>
    <type>Date</type>
</CustomField>