force-app/main/default/objects/Branch__c/fields/Day_Care_ProviderPreSchool_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Day_Care_ProviderPreSchool_Spec_CPL__c</fullName>
    <label>Day Care Provider/Pre-School (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>