force-app/main/default/objects/Branch__c/fields/DayMed_Spas_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>DayMed_Spas_Spec_CPL__c</fullName>
    <label>Day/Med Spas (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>