force-app/main/default/objects/Branch__c/fields/DeckPatio_Build_DTS__c.field-meta.xml
<CustomField>
    <fullName>DeckPatio_Build_DTS__c</fullName>
    <label>Deck/Patio Build (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>