force-app/main/default/objects/Branch__c/fields/DeckPatio_Build_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>DeckPatio_Build_Spec_CPL__c</fullName>
    <label>Deck/Patio Build  (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>