force-app/main/default/objects/Branch__c/fields/Dentist_DTS__c.field-meta.xml
<CustomField>
    <fullName>Dentist_DTS__c</fullName>
    <description>It will hold the roll up summary values of DTS pricebook&apos;s Dentist products counts.</description>
    <label>Dentist (DTS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>