force-app/main/default/objects/Branch__c/fields/Dentist_OBC__c.field-meta.xml
<CustomField>
    <fullName>Dentist_OBC__c</fullName>
    <label>Dentist (OBC)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>