force-app/main/default/objects/Branch__c/fields/Dentist_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Dentist_Spec_CPL__c</fullName>
    <label>Dentist (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>