force-app/main/default/objects/Branch__c/fields/Disaster_Recovery_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Recovery_Spec_CPL__c</fullName>
    <label>Disaster Recovery (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>