force-app/main/default/objects/Branch__c/fields/Dog_GroomingBoarding_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Dog_GroomingBoarding_Spec_CPL__c</fullName>
    <label>Dog Grooming/Boarding (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>