force-app/main/default/objects/Branch__c/fields/Electrician_DTS__c.field-meta.xml
<CustomField>
    <fullName>Electrician_DTS__c</fullName>
    <description>It will hold rollup summary value of Electrician products for Door Tag Script pricebook&apos;s line items</description>
    <label>Electrician (DTS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>