force-app/main/default/objects/Branch__c/fields/Electrician_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Electrician_Spec_CPL__c</fullName>
    <label>Electrician (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>