force-app/main/default/objects/Branch__c/fields/Energy_BarrierInsulation_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Energy_BarrierInsulation_Spec_CPL__c</fullName>
    <label>Energy Audit (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>