force-app/main/default/objects/Branch__c/fields/Fencing_DTS__c.field-meta.xml
<CustomField>
    <fullName>Fencing_DTS__c</fullName>
    <label>Fencing (DTS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>