force-app/main/default/objects/Branch__c/fields/Fireplaces_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Fireplaces_Spec_CPL__c</fullName>
    <label>Fireplaces (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>