force-app/main/default/objects/Branch__c/fields/Flooring_Carpeting_OBC__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Carpeting_OBC__c</fullName>
    <label>Flooring/Carpeting (OBC)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>