force-app/main/default/objects/Branch__c/fields/FlooringCarpeting_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>FlooringCarpeting_Spec_CPL__c</fullName>
    <label>Flooring/Carpeting (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>