force-app/main/default/objects/Branch__c/fields/fTotal_Card_Count__c.field-meta.xml
<CustomField>
    <fullName>fTotal_Card_Count__c</fullName>
    <formula>Active_Card_Count__c + Approved_Card_Count_Not_Ordered__c + Ordered_Card_Count_not_Active__c + Sold_Card_Count_not_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fTotal Card Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>