force-app/main/default/objects/Branch__c/fields/Garage_Doors_DTS__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_DTS__c</fullName>
    <label>Garage Doors (DTS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>