force-app/main/default/objects/Branch__c/fields/Garage_Doors_OBC__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_OBC__c</fullName>
    <label>Garage Doors (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>