force-app/main/default/objects/Branch__c/fields/Garage_Doors_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Spec_CPL__c</fullName>
    <label>Garage Doors (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>