force-app/main/default/objects/Branch__c/fields/Granite_Marble_DTS__c.field-meta.xml
<CustomField>
    <fullName>Granite_Marble_DTS__c</fullName>
    <label>Granite/Marble (DTS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>