force-app/main/default/objects/Branch__c/fields/GraniteMarble_OBC__c.field-meta.xml
<CustomField>
    <fullName>GraniteMarble_OBC__c</fullName>
    <label>Granite/Marble (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>