force-app/main/default/objects/Branch__c/fields/GraniteMarble_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>GraniteMarble_Spec_CPL__c</fullName>
    <label>Granite/Marble (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>