force-app/main/default/objects/Branch__c/fields/Gutter_Cleaning_OBC__c.field-meta.xml
<CustomField>
    <fullName>Gutter_Cleaning_OBC__c</fullName>
    <label>Gutter Cleaning (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>