force-app/main/default/objects/Branch__c/fields/Gutter_Cleaning_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Gutter_Cleaning_Spec_CPL__c</fullName>
    <label>Gutter Cleaning (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>