force-app/main/default/objects/Branch__c/fields/Hair_SalonsBarber_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Hair_SalonsBarber_Spec_CPL__c</fullName>
    <label>Hair Salons/Barber (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>