force-app/main/default/objects/Branch__c/fields/Handyman_DTS__c.field-meta.xml
<CustomField>
    <fullName>Handyman_DTS__c</fullName>
    <label>Handyman (DTS)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>