force-app/main/default/objects/Branch__c/fields/Handyman_OBC__c.field-meta.xml
<CustomField>
    <fullName>Handyman_OBC__c</fullName>
    <label>Handyman (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>