force-app/main/default/objects/Branch__c/fields/Handyman_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Handyman_Spec_CPL__c</fullName>
    <label>Handyman (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>