force-app/main/default/objects/Branch__c/fields/Health_ClubCrossFit__c.field-meta.xml
<CustomField>
    <fullName>Health_ClubCrossFit__c</fullName>
    <label>Health Club/CrossFit (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>