force-app/main/default/objects/Branch__c/fields/Health_ClubCrossFit_DTS__c.field-meta.xml
<CustomField>
    <fullName>Health_ClubCrossFit_DTS__c</fullName>
    <label>Health Club/CrossFit (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>