force-app/main/default/objects/Branch__c/fields/Health_Insurance_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Spec_CPL__c</fullName>
    <label>Health Insurance (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>