force-app/main/default/objects/Branch__c/fields/Home_Automation_DTS__c.field-meta.xml
<CustomField>
    <fullName>Home_Automation_DTS__c</fullName>
    <label>Home Automation (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>