force-app/main/default/objects/Branch__c/fields/Home_Entertainment_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Home_Entertainment_Spec_CPL__c</fullName>
    <label>Home Entertainment (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>