force-app/main/default/objects/Branch__c/fields/Home_ProtectionWarranty_DTS__c.field-meta.xml
<CustomField>
    <fullName>Home_ProtectionWarranty_DTS__c</fullName>
    <label>Home Protection/Warranty (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>