force-app/main/default/objects/Branch__c/fields/Home_Remodeling_DTS__c.field-meta.xml
<CustomField>
    <fullName>Home_Remodeling_DTS__c</fullName>
    <label>Home Remodeling (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>