force-app/main/default/objects/Branch__c/fields/Hot_Tub_DTS__c.field-meta.xml
<CustomField>
    <fullName>Hot_Tub_DTS__c</fullName>
    <label>Hot Tub (DTS)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>