force-app/main/default/objects/Branch__c/fields/HVAC_Services_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Services_Spec_CPL__c</fullName>
    <label>HVAC Services (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>