force-app/main/default/objects/Branch__c/fields/iAir_Duct_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>iAir_Duct_Cleaning__c</fullName>
    <label>iAir Duct Cleaning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>