force-app/main/default/objects/Branch__c/fields/iAppliance_Store__c.field-meta.xml
<CustomField>
    <fullName>iAppliance_Store__c</fullName>
    <label>iAppliance Store</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>