force-app/main/default/objects/Branch__c/fields/iAuto_Repair__c.field-meta.xml
<CustomField>
    <fullName>iAuto_Repair__c</fullName>
    <label>iAuto Repair</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>