force-app/main/default/objects/Branch__c/fields/iAwnings__c.field-meta.xml
<CustomField>
    <fullName>iAwnings__c</fullName>
    <label>iAwnings</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>