force-app/main/default/objects/Branch__c/fields/iBlinds_Shutters__c.field-meta.xml
<CustomField>
    <fullName>iBlinds_Shutters__c</fullName>
    <label>iBlinds/Shutters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>