force-app/main/default/objects/Branch__c/fields/iCable_Internet__c.field-meta.xml
<CustomField>
    <fullName>iCable_Internet__c</fullName>
    <label>iCable/Internet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>