force-app/main/default/objects/Branch__c/fields/iCarpet_Tile_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>iCarpet_Tile_Cleaning__c</fullName>
    <label>iCarpet/Tile Cleaning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>