force-app/main/default/objects/Branch__c/fields/iChimney_Sweep__c.field-meta.xml
<CustomField>
    <fullName>iChimney_Sweep__c</fullName>
    <label>iChimney Sweep</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>