force-app/main/default/objects/Branch__c/fields/iChiropractor__c.field-meta.xml
<CustomField>
    <fullName>iChiropractor__c</fullName>
    <label>iChiropractor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>