force-app/main/default/objects/Branch__c/fields/iCloset_Organizing_Garage_Shelving__c.field-meta.xml
<CustomField>
    <fullName>iCloset_Organizing_Garage_Shelving__c</fullName>
    <label>iCloset Organizing/Garage Shelving</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>