force-app/main/default/objects/Branch__c/fields/iComputer_Repair__c.field-meta.xml
<CustomField>
    <fullName>iComputer_Repair__c</fullName>
    <label>iComputer Repair</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>