force-app/main/default/objects/Branch__c/fields/iDay_Care_Provider_Pre_School__c.field-meta.xml
<CustomField>
    <fullName>iDay_Care_Provider_Pre_School__c</fullName>
    <label>iDay Care Provider/Pre-School</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>