force-app/main/default/objects/Branch__c/fields/iDay_Med_Spas__c.field-meta.xml
<CustomField>
    <fullName>iDay_Med_Spas__c</fullName>
    <label>iDay/Med Spas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>