force-app/main/default/objects/Branch__c/fields/iDeck_Patio_Build__c.field-meta.xml
<CustomField>
    <fullName>iDeck_Patio_Build__c</fullName>
    <label>iDeck/Patio Build</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>