force-app/main/default/objects/Branch__c/fields/iDentist__c.field-meta.xml
<CustomField>
    <fullName>iDentist__c</fullName>
    <label>iDentist</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>