force-app/main/default/objects/Branch__c/fields/Identity_Theft__c.field-meta.xml
<CustomField>
    <fullName>Identity_Theft__c</fullName>
    <label>Identity Theft (OBC)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>