force-app/main/default/objects/Branch__c/fields/Identity_Theft_Spec_CPL__c.field-meta.xml
<CustomField>
    <fullName>Identity_Theft_Spec_CPL__c</fullName>
    <label>Identity Theft (Spec CPL)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>