force-app/main/default/objects/Branch__c/fields/iDisaster_Recovery__c.field-meta.xml
<CustomField>
    <fullName>iDisaster_Recovery__c</fullName>
    <label>iDisaster Recovery</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>