force-app/main/default/objects/Branch__c/fields/iDog_Grooming_Boarding__c.field-meta.xml
<CustomField>
    <fullName>iDog_Grooming_Boarding__c</fullName>
    <label>iDog Grooming/Boarding</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>