force-app/main/default/objects/Branch__c/fields/iDriveways_Repaving__c.field-meta.xml
<CustomField>
    <fullName>iDriveways_Repaving__c</fullName>
    <label>iDriveways/Repaving</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>