force-app/main/default/objects/Branch__c/fields/iElectrician__c.field-meta.xml
<CustomField>
    <fullName>iElectrician__c</fullName>
    <label>iElectrician</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>