force-app/main/default/objects/Branch__c/fields/iEnergy_Audit_Radiant_Barrier_Insulation__c.field-meta.xml
<CustomField>
    <fullName>iEnergy_Audit_Radiant_Barrier_Insulation__c</fullName>
    <label>iEnergy Audit/Radiant Barrier/Insulation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>