force-app/main/default/objects/Branch__c/fields/iFencing__c.field-meta.xml
<CustomField>
    <fullName>iFencing__c</fullName>
    <label>iFencing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>