force-app/main/default/objects/Branch__c/fields/iFireplaces__c.field-meta.xml
<CustomField>
    <fullName>iFireplaces__c</fullName>
    <label>iFireplaces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>