force-app/main/default/objects/Branch__c/fields/iFlooring_Carpeting__c.field-meta.xml
<CustomField>
    <fullName>iFlooring_Carpeting__c</fullName>
    <label>iFlooring/Carpeting</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>