force-app/main/default/objects/Branch__c/fields/iGarage_Doors__c.field-meta.xml
<CustomField>
    <fullName>iGarage_Doors__c</fullName>
    <label>iGarage Doors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>