force-app/main/default/objects/Branch__c/fields/iGranite_Marble__c.field-meta.xml
<CustomField>
    <fullName>iGranite_Marble__c</fullName>
    <label>iGranite/Marble</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>