force-app/main/default/objects/Branch__c/fields/iGutter_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>iGutter_Cleaning__c</fullName>
    <label>iGutter Cleaning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>