force-app/main/default/objects/Branch__c/fields/iHair_Salons_Barber__c.field-meta.xml
<CustomField>
    <fullName>iHair_Salons_Barber__c</fullName>
    <label>iHair Salons/Barber</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>