force-app/main/default/objects/Branch__c/fields/iHandyman__c.field-meta.xml
<CustomField>
    <fullName>iHandyman__c</fullName>
    <label>iHandyman</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>