force-app/main/default/objects/Branch__c/fields/iHealth_Insurance__c.field-meta.xml
<CustomField>
    <fullName>iHealth_Insurance__c</fullName>
    <label>iHealth Insurance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>