force-app/main/default/objects/Branch__c/fields/iHome_Protection_Warranty__c.field-meta.xml
<CustomField>
    <fullName>iHome_Protection_Warranty__c</fullName>
    <label>iHome Protection/Warranty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>