force-app/main/default/objects/Branch__c/fields/iHome_Remodeling__c.field-meta.xml
<CustomField>
    <fullName>iHome_Remodeling__c</fullName>
    <label>iHome Remodeling</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>