force-app/main/default/objects/Branch__c/fields/iHVAC_Services__c.field-meta.xml
<CustomField>
    <fullName>iHVAC_Services__c</fullName>
    <label>iHVAC Services</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>