force-app/main/default/objects/Branch__c/fields/iIdentity_Theft__c.field-meta.xml
<CustomField>
    <fullName>iIdentity_Theft__c</fullName>
    <label>iIdentity Theft</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>