force-app/main/default/objects/Branch__c/fields/iInsulation_Service__c.field-meta.xml
<CustomField>
    <fullName>iInsulation_Service__c</fullName>
    <label>iInsulation Service</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>